--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,72 @@ passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 pydantic==1.10.5
 python-dotenv==1.0.1
+fastapi-jwt-auth==0.5.0
+kubernetes==26.1.0
+docker==6.1.3
+
+# AI模型安全性评估平台依赖包
+# 基于任务书要求的依赖配置
+
+# 深度学习框架
+torch>=1.9.0
+torchvision>=0.10.0
+tensorflow>=2.6.0
+mindspore>=1.5.0
+
+# 数值计算
+numpy>=1.21.0
+scipy>=1.7.0
+
+# 数据处理
+Pillow>=8.3.0
+opencv-python>=4.5.0
+pandas>=1.3.0
+
+# 可视化
+matplotlib>=3.4.0
+seaborn>=0.11.0
+tensorboard>=2.6.0
+
+# 超参数优化
+optuna>=2.10.0
+scikit-optimize>=0.9.0
+
+# 模型格式支持
+onnx>=1.10.0
+onnxruntime>=1.8.0
+
+# 自然语言处理（用于TextFooler和BERT-Attack）
+transformers>=4.10.0
+nltk>=3.6.0
+spacy>=3.1.0
+
+# 配置管理
+PyYAML>=5.4.0
+configparser>=5.0.0
+
+# 日志和监控
+loguru>=0.5.0
+psutil>=5.8.0
+
+# 测试框架
+pytest>=6.2.0
+pytest-cov>=2.12.0
+
+# 代码质量
+black>=21.0.0
+flake8>=3.9.0
+mypy>=0.910
+
+# 文档生成
+sphinx>=4.0.0
+sphinx-rtd-theme>=0.5.0
+
+# 开发工具
+jupyter>=1.0.0
+ipython>=7.0.0
+
+# 可选依赖（根据实际需要安装）
+# tensorflow-gpu>=2.6.0  # GPU版本的TensorFlow
+# torch-scatter>=2.0.0   # PyTorch几何扩展
+# torch-geometric>=2.0.0 # 图神经网络支持 
