--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.0",
+    "pinia": "^2.0.0",
+    "tailwindcss": "^3.4.14",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
-    "pinia": "^2.0.0",
-    "axios": "^1.3.0",
-    "tailwindcss": "^3.4.14",
     "webuploader": "^0.1.5"
   },
   "devDependencies": {
-    "vite": "^3.2.11",
-    "@vitejs/plugin-vue": "^3.2.0"
+    "@vitejs/plugin-vue": "^3.2.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "vite": "^3.2.11"
   }
 }
